test/semantic_error/se_fc_sizeg.c0
int f(int a) {}

int ff() {f(1,2);}
